Added searching of records
